# whaler-gtk4

./: Justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
data/resources/stylesheets/: terminal.css  widgets.css
src/: meson.build  whaler.gresource.xml  window.vala
src/Docker/: ApiClient.vala
src/Widgets/Dialogs/: ContainerPullDialog.vala  ImagesSearchDialog.vala
src/Widgets/Utils/: ContainerPullButton.vala  ContainerPullSearchBar.vala  ImageCard.vala  ImagesSearchBar.vala  ImagesSearchButton.vala
